objects/Contact__x.object
<CustomObject>
    <fields>
        <fullName>MailingGeocodeAccuracy__c</fullName>
        <externalDeveloperName>MailingGeocodeAccuracy</externalDeveloperName>
        <label>Mailing Geocode Accuracy</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>NearAddress</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>ExtendedZip</fullName>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MailingLatitude__c</fullName>
        <externalDeveloperName>MailingLatitude</externalDeveloperName>
        <label>Mailing Latitude</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MailingLongitude__c</fullName>
        <externalDeveloperName>MailingLongitude</externalDeveloperName>
        <label>Mailing Longitude</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MailingPostalCode__c</fullName>
        <externalDeveloperName>MailingPostalCode</externalDeveloperName>
        <label>Mailing Zip/Postal Code</label>
        <length>20</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingState__c</fullName>
        <externalDeveloperName>MailingState</externalDeveloperName>
        <label>Mailing State/Province</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingStreet__c</fullName>
        <externalDeveloperName>MailingStreet</externalDeveloperName>
        <label>Mailing Street</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MasterRecordId__c</fullName>
        <externalDeveloperName>MasterRecordId</externalDeveloperName>
        <label>Master Record ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddleName__c</fullName>
        <externalDeveloperName>MiddleName</externalDeveloperName>
        <label>Middle Name</label>
        <length>40</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <externalDeveloperName>MobilePhone</externalDeveloperName>
        <label>Mobile Phone</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Full Name</label>
        <length>121</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OptIn_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>OptIn__c</externalDeveloperName>
        <label>Opt-in</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OtherAddress__c</fullName>
        <externalDeveloperName>OtherAddress</externalDeveloperName>
        <label>Other Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OtherCity__c</fullName>
        <externalDeveloperName>OtherCity</externalDeveloperName>
        <label>Other City</label>
        <length>40</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherCountryCode__c</fullName>
        <externalDeveloperName>OtherCountryCode</externalDeveloperName>
        <label>Other Country Code</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                    <label>Afghanistan</label>
                </value>
                <value>
                    <fullName>AX</fullName>
                    <label>Aland Islands</label>
                </value>
                <value>
                    <fullName>AL</fullName>
                    <label>Albania</label>
                </value>
                <value>
                    <fullName>DZ</fullName>
                    <label>Algeria</label>
                </value>
                <value>
                    <fullName>AD</fullName>
                    <label>Andorra</label>
                </value>
                <value>
                    <fullName>AO</fullName>
                    <label>Angola</label>
                </value>
                <value>
                    <fullName>AI</fullName>
                    <label>Anguilla</label>
                </value>
                <value>
                    <fullName>AQ</fullName>
                    <label>Antarctica</label>
                </value>
                <value>
                    <fullName>AG</fullName>
                    <label>Antigua and Barbuda</label>
                </value>
                <value>
                    <fullName>AR</fullName>
                    <label>Argentina</label>
                </value>
                <value>
                    <fullName>AM</fullName>
                    <label>Armenia</label>
                </value>
                <value>
                    <fullName>AW</fullName>
                    <label>Aruba</label>
                </value>
                <value>
                    <fullName>AU</fullName>
                    <label>Australia</label>
                </value>
                <value>
                    <fullName>AT</fullName>
                    <label>Austria</label>
                </value>
                <value>
                    <fullName>AZ</fullName>
                    <label>Azerbaijan</label>
                </value>
                <value>
                    <fullName>BS</fullName>
                    <label>Bahamas</label>
                </value>
                <value>
                    <fullName>BH</fullName>
                    <label>Bahrain</label>
                </value>
                <value>
                    <fullName>BD</fullName>
                    <label>Bangladesh</label>
                </value>
                <value>
                    <fullName>BB</fullName>
                    <label>Barbados</label>
                </value>
                <value>
                    <fullName>BY</fullName>
                    <label>Belarus</label>
                </value>
                <value>
                    <fullName>BE</fullName>
                    <label>Belgium</label>
                </value>
                <value>
                    <fullName>BZ</fullName>
                    <label>Belize</label>
                </value>
                <value>
                    <fullName>BJ</fullName>
                    <label>Benin</label>
                </value>
                <value>
                    <fullName>BM</fullName>
                    <label>Bermuda</label>
                </value>
                <value>
                    <fullName>BT</fullName>
                    <label>Bhutan</label>
                </value>
                <value>
                    <fullName>BO</fullName>
                    <label>Bolivia, Plurinational State of</label>
                </value>
                <value>
                    <fullName>BQ</fullName>
                    <label>Bonaire, Sint Eustatius and Saba</label>
                </value>
                <value>
                    <fullName>BA</fullName>
                    <label>Bosnia and Herzegovina</label>
                </value>
                <value>
                    <fullName>BW</fullName>
                    <label>Botswana</label>
                </value>
                <value>
                    <fullName>BV</fullName>
                    <label>Bouvet Island</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OtherCountry__c</fullName>
        <externalDeveloperName>OtherCountry</externalDeveloperName>
        <label>Other Country</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherGeocodeAccuracy__c</fullName>
        <externalDeveloperName>OtherGeocodeAccuracy</externalDeveloperName>
        <label>Other Geocode Accuracy</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>NearAddress</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>ExtendedZip</fullName>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OtherLatitude__c</fullName>
        <externalDeveloperName>OtherLatitude</externalDeveloperName>
        <label>Other Latitude</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherLongitude__c</fullName>
        <externalDeveloperName>OtherLongitude</externalDeveloperName>
        <label>Other Longitude</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherPhone__c</fullName>
        <externalDeveloperName>OtherPhone</externalDeveloperName>
        <label>Other Phone</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OtherPostalCode__c</fullName>
        <externalDeveloperName>OtherPostalCode</externalDeveloperName>
        <label>Other Zip/Postal Code</label>
        <length>20</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherState__c</fullName>
        <externalDeveloperName>OtherState</externalDeveloperName>
        <label>Other State/Province</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherStreet__c</fullName>
        <externalDeveloperName>OtherStreet</externalDeveloperName>
        <label>Other Street</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerIsPartnerUser_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>OwnerIsPartnerUser__c</externalDeveloperName>
        <label>TECH - Owner Is a Partner User</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PhoneExt_c__c</fullName>
        <externalDeveloperName>PhoneExt__c</externalDeveloperName>
        <label>Extension</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <externalDeveloperName>Phone</externalDeveloperName>
        <label>Business Phone</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PhotoUrl__c</fullName>
        <externalDeveloperName>PhotoUrl</externalDeveloperName>
        <label>Photo URL</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Position_Level_c__c</fullName>
        <externalDeveloperName>Position_Level__c</externalDeveloperName>
        <label>Position Level</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C-Suite/Owner</fullName>
                </value>
                <value>
                    <fullName>Vice President</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Supervisor</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Department Head</fullName>
                </value>
                <value>
                    <fullName>HealthCare Professional</fullName>
                </value>
                <value>
                    <fullName>Technician</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Primary_Contact__c</externalDeveloperName>
        <label>Primary Contact</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_c__c</fullName>
        <externalDeveloperName>Profile__c</externalDeveloperName>
        <inlineHelpText>Partner Admin have additional powers:
----- View 
- Invoices
- Sales Orders
- Cases
----- Add on Customer and Prospect Accounts: 
- Distributor Account Objectives
- Distributor Account Team Members</inlineHelpText>
        <label>Profile</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partner Admin user</fullName>
                </value>
                <value>
                    <fullName>Partner Standard user</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reagent_Contact_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Reagent_Contact__c</externalDeveloperName>
        <label>Reagent Contact</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReasonforRejection_c__c</fullName>
        <externalDeveloperName>ReasonforRejection__c</externalDeveloperName>
        <inlineHelpText>Write here the reason for the rejection. The Partner User who requested will see it in an email notifying about the rejection</inlineHelpText>
        <label>Reason for Rejection</label>
        <length>8000</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <externalDeveloperName>RecordTypeId</externalDeveloperName>
        <label>Record Type ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_Number_c__c</fullName>
        <externalDeveloperName>Ref_Number__c</externalDeveloperName>
        <label>Ref Number</label>
        <length>50</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regulatory_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Regulatory__c</externalDeveloperName>
        <label>Regulatory</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RejectCurrentRequest_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RejectCurrentRequest__c</externalDeveloperName>
        <label>Reject Current Request</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReportsToId__c</fullName>
        <externalDeveloperName>ReportsToId</externalDeveloperName>
        <label>Reports To ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequesterLastName_c__c</fullName>
        <externalDeveloperName>RequesterLastName__c</externalDeveloperName>
        <label>Requester Last Name</label>
        <length>40</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequesterName_c__c</fullName>
        <externalDeveloperName>RequesterName__c</externalDeveloperName>
        <label>Requester Name</label>
        <length>40</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAPCustomerNumber_c__c</fullName>
        <externalDeveloperName>SAPCustomerNumber__c</externalDeveloperName>
        <label>SAP Customer Number</label>
        <length>32</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBS_c__c</fullName>
        <externalDeveloperName>SBS__c</externalDeveloperName>
        <label>SBS</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <label>A - Culture</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>B - ID/AST Auto</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>C - ID/AST Manual</label>
                </value>
                <value>
                    <fullName>D</fullName>
                    <label>D - Blood Culture</label>
                </value>
                <value>
                    <fullName>E</fullName>
                    <label>E - Lab Efficiency</label>
                </value>
                <value>
                    <fullName>F</fullName>
                    <label>F - Numeration Automated</label>
                </value>
                <value>
                    <fullName>G</fullName>
                    <label>G - Cytometry</label>
                </value>
                <value>
                    <fullName>H</fullName>
                    <label>H - Endonext</label>
                </value>
                <value>
                    <fullName>L</fullName>
                    <label>L - Bioball</label>
                </value>
                <value>
                    <fullName>M</fullName>
                    <label>M - Clinical Chemistery</label>
                </value>
                <value>
                    <fullName>P</fullName>
                    <label>P - Molecular Biology</label>
                </value>
                <value>
                    <fullName>Q</fullName>
                    <label>Q - Biofire</label>
                </value>
                <value>
                    <fullName>R</fullName>
                    <label>R - Immunoassay Automated</label>
                </value>
                <value>
                    <fullName>S</fullName>
                    <label>S - Serology &amp; Others</label>
                </value>
                <value>
                    <fullName>T</fullName>
                    <label>T - Microplates</label>
                </value>
                <value>
                    <fullName>W</fullName>
                    <label>W - Commercial Services</label>
                </value>
                <value>
                    <fullName>X</fullName>
                    <label>X - Sequencing</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <label>Y - Data Analytics</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDS_Safety_Data_Sheet_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>SDS_Safety_Data_Sheet__c</externalDeveloperName>
        <label>SDS – Safety Data Sheet</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalutationComparator_c__c</fullName>
        <externalDeveloperName>SalutationComparator__c</externalDeveloperName>
        <label>Salutation Comparator</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <externalDeveloperName>Salutation</externalDeveloperName>
        <label>Salutation</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
                <value>
                    <fullName>Master</fullName>
                </value>
                <value>
                    <fullName>Engineer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Software_Updates_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Software_Updates__c</externalDeveloperName>
        <label>Software Updates</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <externalDeveloperName>Suffix</externalDeveloperName>
        <label>Suffix</label>
        <length>40</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuspensionRequest_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>SuspensionRequest__c</externalDeveloperName>
        <label>Suspension Requested</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>System_Contact_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>System_Contact__c</externalDeveloperName>
        <label>System Contact</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECH_Contact_DistID_CustID_c__c</fullName>
        <externalDeveloperName>TECH_Contact_DistID_CustID__c</externalDeveloperName>
        <label>TECH_Contact_DistID_CustID</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tech_ContactsPendingList_c__c</fullName>
        <externalDeveloperName>Tech_ContactsPendingList__c</externalDeveloperName>
        <label>Tech_ContactsPendingList</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tech_OrgURL_c__c</fullName>
        <externalDeveloperName>Tech_OrgURL__c</externalDeveloperName>
        <label>Tech_OrgURL</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tech_PartnerCommunityURL_c__c</fullName>
        <externalDeveloperName>Tech_PartnerCommunityURL__c</externalDeveloperName>
        <label>Tech_PartnerCommunityURL</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <externalDeveloperName>Title</externalDeveloperName>
        <label>Title</label>
        <length>128</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Contact_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Training_Contact__c</externalDeveloperName>
        <label>Training Contact</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_c__c</fullName>
        <externalDeveloperName>Type__c</externalDeveloperName>
        <label>Type</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exec</fullName>
                </value>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Line of Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserStatus_c__c</fullName>
        <externalDeveloperName>UserStatus__c</externalDeveloperName>
        <inlineHelpText>Active: The User is Active and can log into the Distributor Portal
Suspended: The User cannot log into the Portal, but can be re-activated upon request
Disabled: The User cannot log into the Portal and has been permanently disabled</inlineHelpText>
        <label>Partner User Status</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Disabled from Community</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isOwnerSameAsAccountOwner_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>isOwnerSameAsAccountOwner__c</externalDeveloperName>
        <label>Owner same as Account Owner</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi_Needs_Score_Synced_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>pi__Needs_Score_Synced__c</externalDeveloperName>
        <label>Needs Score Synced</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi_Pardot_Last_Scored_At_c__c</fullName>
        <externalDeveloperName>pi__Pardot_Last_Scored_At__c</externalDeveloperName>
        <label>Pardot Last Scored At</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi_campaign_c__c</fullName>
        <externalDeveloperName>pi__campaign__c</externalDeveloperName>
        <label>Pardot Campaign</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_comments_c__c</fullName>
        <externalDeveloperName>pi__comments__c</externalDeveloperName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi_conversion_date_c__c</fullName>
        <externalDeveloperName>pi__conversion_date__c</externalDeveloperName>
        <label>Pardot Conversion Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi_conversion_object_name_c__c</fullName>
        <externalDeveloperName>pi__conversion_object_name__c</externalDeveloperName>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_conversion_object_type_c__c</fullName>
        <externalDeveloperName>pi__conversion_object_type__c</externalDeveloperName>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_created_date_c__c</fullName>
        <externalDeveloperName>pi__created_date__c</externalDeveloperName>
        <label>Pardot Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi_first_activity_c__c</fullName>
        <externalDeveloperName>pi__first_activity__c</externalDeveloperName>
        <label>Pardot First Activity</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi_first_search_term_c__c</fullName>
        <externalDeveloperName>pi__first_search_term__c</externalDeveloperName>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_first_search_type_c__c</fullName>
        <externalDeveloperName>pi__first_search_type__c</externalDeveloperName>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_first_touch_url_c__c</fullName>
        <externalDeveloperName>pi__first_touch_url__c</externalDeveloperName>
        <label>Pardot First Referrer</label>
        <length>65000</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi_grade_c__c</fullName>
        <externalDeveloperName>pi__grade__c</externalDeveloperName>
        <label>Pardot Grade</label>
        <length>10</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_last_activity_c__c</fullName>
        <externalDeveloperName>pi__last_activity__c</externalDeveloperName>
        <label>Pardot Last Activity</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi_notes_c__c</fullName>
        <externalDeveloperName>pi__notes__c</externalDeveloperName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi_pardot_hard_bounced_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>pi__pardot_hard_bounced__c</externalDeveloperName>
        <label>Pardot Hard Bounced</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi_score_c__c</fullName>
        <externalDeveloperName>pi__score__c</externalDeveloperName>
        <label>Pardot Score</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi_url_c__c</fullName>
        <externalDeveloperName>pi__url__c</externalDeveloperName>
        <label>Pardot URL</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi_utm_campaign_c__c</fullName>
        <externalDeveloperName>pi__utm_campaign__c</externalDeveloperName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_utm_content_c__c</fullName>
        <externalDeveloperName>pi__utm_content__c</externalDeveloperName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
</CustomObject>